# trim-go-asm

./: Cargo.toml  LICENSE  README.md  go-tool-compile-trim-goroutine-remove-pcdata-funcdata.stdout  go-tool-compile-trim-goroutine.stdout  go-tool-compile.stdin  go-tool-compile.stdout  x.go
src/: main.rs  tree.rs  trim.rs
