[package]
name = "trim-go-asm"
version = "0.1.3"
authors = ["Krouton <me+git@tokinia.me>"]
description = "Trim Go Assembly from $ go tool compile -S"
rust-version = "1.56"
license = "MIT"
edition = "2021"
categories = ["command-line-utilities"]
license-file = "LICENSE"
repository = "https://github.com/ggvm-org/trim-go-asm"

[[bin]]
name = "trim-go-asm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
